manifests/web-terminal.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    App: web-terminal
    Environment: dev
  labels:
    app: web-terminal
  name: web-terminal
  namespace: default
spec:
  ports:
  - name: web-terminal
    port: 80
    protocol: TCP
    targetPort: 7681
  selector:
    app: web-terminal
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    App: web-terminal
    Environment: dev
  labels:
    app: web-terminal
  name: web-terminal
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-terminal
  template:
    metadata:
      annotations:
        App: web-terminal
        Environment: dev
      labels:
        app: web-terminal
    spec:
      containers:
      - env:
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: kubeclever/web-terminal:IMAGE_TAG
        imagePullPolicy: Always
        name: web-terminal
        resources:
          limits:
            cpu: 160m
            memory: 512Mi
          requests:
            cpu: 40m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
      securityContext:
        fsGroup: 65533
        runAsNonRoot: true
      serviceAccountName: cluster-web-terminal
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    App: web-terminal
    Environment: dev
  name: web-terminal
  namespace: default
spec:
  gateways:
  - default/external-gateway
  hosts:
  - terminal....com
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: web-terminal.default.svc.cluster.local
        port:
          number: 80
